# PASCAI-FMS

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  onetouch installation.bat  pyproject.toml
src/: main.py
src/PASCAI_DB/: postgre_connection.py
src/PASCAI_FMS/: file_loader.py
src/config/: RMQconfig.py  pgconfig.py
