[project]
name = "fms"
version = "0.1.0"
description = "File Management System with AI-powered Search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]


[dependency-groups]
dev = [
    "black",
    "ruff",
    "pre-commit",
    "pyright",
    "devtools",
]
test = [
    "pytest",
    "pytest-asyncio",
]